# pnpl

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
datasets/: grouped_dataset.py
datasets/hdf5/: dataset.py
datasets/libribrain2025/: base.py  phoneme_dataset.py
scripts/: preprocess_libribrain.py
