[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnpl"
version = "0.0.7"
description = "MEG data loading library with preprocessed HDF5 data loading, grouping, and LibriBrain competition support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PNPL"},
]
keywords = ["MEG", "EEG", "neuroimaging", "brain", "LibriBrain", "HDF5", "preprocessing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "h5py>=3.0.0",
    "pandas>=2.0.0",
    "mne-bids>=0.14.0",
    "huggingface-hub>=0.20.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/September-Labs/pnpl"
Repository = "https://github.com/September-Labs/pnpl"
Issues = "https://github.com/September-Labs/pnpl/issues"

[project.optional-dependencies]
preprocessing = ["mne>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["pnpl", "pnpl.datasets", "pnpl.datasets.hdf5", "pnpl.datasets.libribrain2025"]
package-dir = {"pnpl" = "."}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]